# reedsolomon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependencies.yml  format.yml  release.yml
examples/: main.cpp
include/: reedsolomon.h
src/: reedsolomon.cc
tests/: test_decoder.cpp  test_encoder.cpp  test_galois_field.cpp  test_reedsolomon.cpp
